mule-user-guide/v/3.7/including-the-datamapper-plugin.adoc
= Including the DataMapper Plugin
:keywords: datamapper, migration

DataMapper is deprecated as of Mule runtime 3.7.0 and superseded by link:/mule-user-guide/v/3.7/using-dataweave-in-studio[DataWeave]. 

[NOTE]
====
DataMapper will continue to be fully supported in all current and future versions of Mule ESB 3.x, however it will be removed in Mule 4.0 in favour of the *Transform Message* component (based on link:https://developer.mulesoft.com/docs/display/current/DataWeave[DataWeave] code). We recommend that if you wish to take advantage of the new capabilities of DataWeave or if you start new projects, upgrade now.

A link:/mule-user-guide/v/3.8/dataweave-migrator[migration tool] is now included in Studio, which assists in converting a DataMapper map to DataWeave. Right click on a DataMapper, select *Migrate to DataWeave*, and follow the instructions.

image:dw_migrator_script.png[dw migrator]

If you don't see DataMapper on your palette, you can enable it by going to *Preferences* -> *Anypoint Studio* -> *Palette Profiles* and ticking the checkbox *Show deprecated Mule Components and Attributes*.
====

If you want to deploy a Mule project that contains a DataMapper transformer in it, consider the following:

* When deploying through Anypoint Studio, it should still work normally
* When deploying to CloudHub, it should also work out of the box
* However, when using for Mule ESB Standalone 3.7.0, you must do the following before you can deploy your application: +

. Go to the customer portal
. Select the Downloads tab
. Look in your Mule Runtime version and download the *DataMapper plugin* that corresponds to your Mule version
. Place the downloaded .zip file in the `/plugins` folder of Mule-Enterprise Standalone
